--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.4.0",
-    "mongoose": "^5.10.10"
+    "mongoose": "^5.10.10",
+    "sanitize-html": "^2.1.2"
   },
   "devDependencies": {
     "eslint": "^7.12.0",
