--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.4.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.10.10",
     "sanitize-html": "^2.1.2"
   },
